tdf#157569: FormulaImExportBase::getFormulaSize should return mm/100

Similar to commit 798d21e2a1b8bc48b6bb5e1b3cf0cba0e5882a59 (tdf#157965:
UNO methods are expected to return sizes in mm/100, 2023-10-29); this
was an omission from commit 9e92a17cb6e03beedeeca40bfc8524c2623d31eb
(starmath: Improve glyph positioning, 2023-09-19).

The method is called in DomainMapper_Impl::appendStarMath(), and the
returned value is used to define object size using UNO methods.

Change-Id: I37cc4d5dd18641915495b97f0d99fa10a805e18c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160827
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>